Fix RI core shutdown and gate edge cases
Signed-off-by: Jonathan Putney <jonathan@putney.io>